--- a/ARBuild/app/src/main/res/layout/activity_main.xml
+++ b/ARBuild/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        tools:context=".Test" />
+        tools:context=".BackendService" />
 
 </LinearLayout>
