--- a/ARBuild/app/src/main/res/layout/activity_arstep.xml
+++ b/ARBuild/app/src/main/res/layout/activity_arstep.xml
@@ -10,4 +10,11 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="top" />
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
