--- a/ARBuild/app/src/main/res/layout/activity_barcode.xml
+++ b/ARBuild/app/src/main/res/layout/activity_barcode.xml
@@ -54,6 +54,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Skip" />
     </FrameLayout>
 
 </RelativeLayout>
