--- a/ARBuild/app/src/main/res/layout/fragment_calibrate.xml
+++ b/ARBuild/app/src/main/res/layout/fragment_calibrate.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/up_arrow"
+                android:background="@drawable/up_white"
                 tools:layout_editor_absoluteX="194dp"
                 tools:layout_editor_absoluteY="239dp" />
 
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/left_arrow"
+                android:background="@drawable/left_white"
                 tools:layout_editor_absoluteX="194dp"
                 tools:layout_editor_absoluteY="239dp" />
 
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/right_arrow"
+                android:background="@drawable/right_white"
                 tools:layout_editor_absoluteX="194dp"
                 tools:layout_editor_absoluteY="239dp" />
 
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/down_arrow"
+                android:background="@drawable/down_white"
                 tools:layout_editor_absoluteX="194dp"
                 tools:layout_editor_absoluteY="239dp" />
 
