invisible skip button

--- a/ARBuild/app/src/main/res/layout/activity_barcode.xml
+++ b/ARBuild/app/src/main/res/layout/activity_barcode.xml
@@ -52,13 +52,16 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <Button
             android:id="@+id/skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Skip" />
+            android:text="Skip"
+            android:visibility="invisible" />
     </FrameLayout>
 
 </RelativeLayout>
