--- a/ARBuild/app/src/main/res/layout/fragment_calibrate.xml
+++ b/ARBuild/app/src/main/res/layout/fragment_calibrate.xml
@@ -98,12 +98,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="500sp"
+            android:layout_alignParentBottom="true"
             android:background="@color/instruction_button"
             android:orientation="vertical">
 
