--- a/ARBuild/app/src/main/res/layout/activity_arstep.xml
+++ b/ARBuild/app/src/main/res/layout/activity_arstep.xml
@@ -12,16 +12,17 @@
         android:layout_height="match_parent"
         android:layout_gravity="top" />
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible" />
 
     <fragment
         android:id="@+id/calibrate"
         android:name="com.endercrest.arbuild.CalibrateFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </RelativeLayout>
